@@ -1110,6 +1110,11 @@ speed_mpn_toom42_mul (struct speed_params *s)
   SPEED_ROUTINE_MPN_TOOM42_MUL (mpn_toom42_mul);
 }
 double
+speed_mpn_toom43_mul (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_TOOM43_MUL (mpn_toom43_mul);
+}
+double
 speed_mpn_toom63_mul (struct speed_params *s)
 {
   SPEED_ROUTINE_MPN_TOOM63_MUL (mpn_toom63_mul);
